; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23369.c_banner.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23369.c_banner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"\0A    local exploit for unace v <= 2.2 by Li0n7\0A\00", align 1
@.str.1 = private unnamed_addr constant [74 x i8] c"    vulnerability reported by Andreas Constantinides <megahz@megahz.org>\0A\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"    visit us: http://www.ioc.fr.st\0A\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"    contact me: Li0n7[at]voila[dot]fr\0A\00", align 1
@.str.4 = private unnamed_addr constant [62 x i8] c"    usage: %s [-r <RET>][-b [-s <STARTING_RET>][-d <DIFF>]]\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @banner(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 (i32, i8*, ...) @fprintf(i32 %3, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @stderr, align 4
  %6 = call i32 (i32, i8*, ...) @fprintf(i32 %5, i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 (i32, i8*, ...) @fprintf(i32 %7, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 (i32, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0))
  %11 = load i32, i32* @stderr, align 4
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %11, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.4, i64 0, i64 0), i8* %12)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
